--- a/index.html
+++ b/index.html
@@ -2894,7 +2894,7 @@
 
         // NEW: Tutorial Button Handler
         function handleTutorialButton() {
-            window.open('https://youtube.com/shorts/nxPuAx9cb88?si=Lt7qMBQ-wMPZHm0W', '_blank');
+            window.open('https://t.me/DataSellingAppHMR/15', '_blank');
         }
 
         // Event Listeners
